--- a/Angular Project/src/app/story/story.component.css
+++ b/Angular Project/src/app/story/story.component.css
@@ -13,10 +13,10 @@
     border-bottom: none;
   }
 
-  .btn-primary {
+  /* .btn-primary {
     background-color: #3AAFA9;
     color: #FFFFFF;
-  }
+  } */
 
 
 .text-light {
