--- a/Angular Project/src/app/navbar/navbar.component.html
+++ b/Angular Project/src/app/navbar/navbar.component.html
@@ -8,7 +8,7 @@
         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
           <a class="dropdown-item" href="javascript:void(0);" aria-haspopup="true" aria-expanded="false" (click)="navToHome()">Homepage</a>
           <a class="dropdown-item" href="javascript:void(0);" aria-haspopup="true" aria-expanded="false" (click)="navToProfile()">Profile</a>
-          <a class="dropdown-item" href="javascript:void(0);" aria-haspopup="true" aria-expanded="false" (click)="navToCal()">Calendar</a>
+          <a *ngIf="user.typeFlag==1" class="dropdown-item" href="javascript:void(0);" aria-haspopup="true" aria-expanded="false" (click)="navToCal()">Calendar</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#" aria-haspopup="true" aria-expanded="false" (click)="logout()">Logout</a>
         </div>
